Added a sidenav closing, updated readme and about

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,7 +4,8 @@
         class="md-sidenav-left"
         md-component-id="left"
         md-is-locked-open="$mdMedia('gt-md')"
-        md-whiteframe="4">
+        md-whiteframe="4"
+        ng-click="$ctrl.closeMenu()">
 
       <md-toolbar layout-align="center center" class="md-toolbar-tools md-accent">
         <youtube-account></youtube-account>
