--- a/src/app/components/about/about.html
+++ b/src/app/components/about/about.html
@@ -45,7 +45,7 @@
 			</p>
 			<h4>Способ третий. Hard.</h4>
 			<p>
-				Исходники проекта находятся на GitHub, поэтому любой желающий
+				<a href="https://github.com/youlikeapp/youlikeapp.github.io" target="_blank">Исходники проекта</a> находятся на GitHub, поэтому любой желающий
 				может попробовать модифицировать его и сделать пулл-реквест.
 				И да, там же можно писать о проблемах/пожеланиях, если не пугает
 				буржуйский язык. =)
