--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -5,7 +5,7 @@
 			<md-content flex="70" flex-xs="100">
 				<md-input-container class="md-block">
 					<label>Список видео (идентификаторы или полные ссылки)</label>
-					<textarea required rows="12" md-no-autogrow 
+					<textarea required rows="12" md-no-autogrow  id="videosListTextArea"
 					ng-class = "$ctrl.videosListIsEmpty && 'list-empty'"
 					ng-model="$ctrl.videosList" ng-focus="$ctrl.onListFocus()" ng-blur="$ctrl.onListBlur()"
 					ng-change="$ctrl.onListChange()"></textarea>
@@ -14,12 +14,14 @@
 					<md-button class="md-primary md-raised" ng-disabled="$ctrl.videosListIsEmpty" 
 					ng-click="$ctrl.checkVideos()"><md-icon class="material-icons">&#xE065;</md-icon> Проверить</md-button>
 					<md-button class="md-raised" ng-disabled="$ctrl.videosListIsEmpty"
+					id="saveListBtn"
 					ng-click="$ctrl.saveList()"><md-icon class="material-icons">&#xE161;</md-icon> Сохранить</md-button>
 					<md-button class="md-raised" ng-if="$ctrl.hasVideosInStorage" ng-click="$ctrl.loadList()">
 						<md-icon class="material-icons">&#xE929;</md-icon>
 						Загрузить
 					</md-button>
-					<md-button class="md-raised md-accent" ng-if="$ctrl.hasVideosInStorage" ng-click="$ctrl.clearList()">
+					<md-button class="md-raised md-accent" ng-if="$ctrl.hasVideosInStorage" 
+					ng-click="$ctrl.clearList()" id="clearListBtn">
 						<md-icon class="material-icons">&#xE872;</md-icon>
 						Удалить
 					</md-button>	
