Updated readme, added small fixes

--- a/src/app/components/about/about.html
+++ b/src/app/components/about/about.html
@@ -33,7 +33,7 @@
 				socialshare
 				socialshare-provider="{{ ::social.provider }}"
 				socialshare-text="YouLike - Восстановление лайков на YouTube."
-				socialshare-url="https://youlikeapp.github.io">
+				socialshare-url="{{ document.location.origin }}">
 					<i class="fa fa-{{ ::social.icon }}"></i>
 					{{ ::social.title }}
 				</a>
@@ -49,20 +49,6 @@
 				может попробовать модифицировать его и сделать пулл-реквест.
 				И да, там же можно писать о проблемах/пожеланиях, если не пугает
 				буржуйский язык. =)
-			</p>
-			<h2>Заключение</h2>
-			<p>
-				Многие люди в нашей стране давно хотят перемен и мечтают построить ту самую
-				"прекрасную Россию будущего" (в том числе и я). 
-				И одним из основных инструментов достижения этой
-				(пусть и утопичной) цели сегодня является YouTube - единственный на данный момент
-				крупный оплот независимых СМИ и видеоблогеров. Надеюсь, что мой небольшой вклад
-				хоть как-то поможет нашему общему делу.
-				<p class="strikethrough">
-					М-да, я вообще не умею в эпичные речи, грустненько.
-				</p>
-
-				<i>С уважением, Руслан.</i>
 			</p>
 		</md-content>
 	</div>
