Updated link for social buttons

--- a/src/app/components/about/about.html
+++ b/src/app/components/about/about.html
@@ -33,7 +33,7 @@
 				socialshare
 				socialshare-provider="{{ ::social.provider }}"
 				socialshare-text="YouLike - Восстановление лайков на YouTube."
-				socialshare-url="{{ document.location.origin }}">
+				socialshare-url="https://youlikeapp.github.io">
 					<i class="fa fa-{{ ::social.icon }}"></i>
 					{{ ::social.title }}
 				</a>
