Added extension page, updated README, changed routing.

--- a/src/app/components/about/about.html
+++ b/src/app/components/about/about.html
@@ -19,9 +19,9 @@
 			<h2>Коротко о планах</h2>
 			<p>
 				Сейчас доступен минимальный необходимый функционал, но если в дальнейшем развитии
-				будет заинтересована достаточно большая группа людей, то я планирую как минимум создать
-				расширение для браузера Chrome с идентичным функционалом + возможность добавлять видео в список 
-				прямо со страницы YouTube. Также нужно будет решить вопрос с квотой на запросы к YouTube Data API.
+				будет заинтересована достаточно большая группа людей, то я планирую как минимум решить вопрос 
+				с квотой на запросы к YouTube Data API 
+				(либо попробовать реализовать альтернативный способ восстановления лайков без его использования).
 			</p>
 			<h2>О том, как можно помочь</h2>
 			<h4>Способ первый. Easy.</h4>
@@ -49,6 +49,12 @@
 				может попробовать модифицировать его и сделать пулл-реквест.
 				И да, там же можно писать о проблемах/пожеланиях, если не пугает
 				буржуйский язык. =)
+			</p>
+			<p>
+				Ссылка на репозиторий расширения для Google Chrome: 
+				<a href="https://github.com/Plastiquewind/youlike-chrome-extension" target="_blank">
+					https://github.com/Plastiquewind/youlike-chrome-extension
+				</a>.
 			</p>
 		</md-content>
 	</div>
