--- a/src/app/components/extension/extension.html
+++ b/src/app/components/extension/extension.html
@@ -2,6 +2,11 @@
 	<h1 class="md-headline">Установка расширения</h1>
 	<div class="md-body-1">
 		<md-content>
+			<p>
+				Данное расширение позволит добавлять видео в список для проверки прямо со страницы YouTube.
+				Достаточно будет лишь нажать на кнопку "Добавить в YouLike", 
+				расположенную под кнопками лайка и дизлайка.
+			</p>
 			<h2>Google Chrome</h2>
 			<p>
 				<a href="https://chrome.google.com/webstore/detail/youlike-%D0%B2%D0%BE%D1%81%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5-%D0%BB%D0%B0/bpnhjhdmbhnjkhemgmfahahohblnombi"
@@ -10,9 +15,14 @@
 				</a>
 			</p>
 			<p>
-				Данное расширение позволит добавлять видео в список для проверки прямо со страницы YouTube.
-				Достаточно будет лишь нажать на кнопку "Добавить в YouLike", 
-				расположенную под кнопками лайка и дизлайка.
+				По этой же ссылке можно установить расширение для Я.Браузер.
+			</p>
+			<h2>Mozilla Firefox</h2>
+			<p>
+				<a href="https://addons.mozilla.org/ru/firefox/addon/youlike-%D0%B2%D0%BE%D1%81%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5-%D0%BB%D0%B0%D0%B9%D0%BA%D0%BE%D0%B2/"
+				target="_blank">
+					Установить расширение для Mozilla Firefox
+				</a>	
 			</p>
 		</md-content>
 	</div>
