Added displaying info about videos without likes.

--- a/app.css
+++ b/app.css
@@ -1,4 +1,4 @@
-.list-empty{color:#999!important}.confirm-dialog-container{visibility:hidden}.strikethrough{-webkit-text-decoration-line:line-through;text-decoration-line:line-through}/*!
+.list-empty{color:#999!important}.dialog-container{visibility:hidden}.strikethrough{-webkit-text-decoration-line:line-through;text-decoration-line:line-through}/*!
  * Angular Material Design
  * https://github.com/angular/material
  * @license MIT
