comments check cancel logic

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,3 +18,11 @@ html, body {
 ui-view {
   min-height: 100vh;
 }
+
+.block-ui-status {
+  min-width: 330px;
+  text-align: center;
+  #stopCommentsCheck {
+    margin-top: 30px;
+  }
+}
