--- a/src/app/components/comments/blockTemplate.html
+++ b/src/app/components/comments/blockTemplate.html
@@ -1,14 +1,13 @@
 <div class="block-ui-overlay"></div>
 <div class="block-ui-message-container" aria-live="assertive" aria-atomic="true">
-    <div class="block-ui-message" layout-align="center" ng-class="$_blockUiMessageClass">
+    <div class="block-ui-message block-ui-status" ng-class="$_blockUiMessageClass">
         <div ng-if="state.template === 'likes'">{{ state.message }}</div>
         <div ng-if="state.template === 'commentsCheck'">
             <div>коментарии: {{state.message.totalCommentsChecked}} / ~{{state.message.totalCommentsToCheck}}</div>
             <div style="color: red">от кремлеботов: {{ state.message.botComments }}</div>
         </div>
-        <!--md-button id="stopCommentsCheck"
-                   class="md-primary md-raised md-accent md-confirm-button">
-            Остановить проверку
-        </md-button>-->
+        <md-button id="stopCommentsCheck" class="md-primary md-accent">
+            Отменить проверку
+        </md-button>
     </div>
 </div>
